<resources>
    <string name="app_name">Uni-Forum</string>
    <string name="uniforum">Uni-Forum</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>

    <!-- This section for the intro slider -->
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">About Yourself !</string>
    <string name="slide_1_desc">An exciting profile with your personal and academic information which also a digital ID.</string>

    <string name="slide_2_title">Your Semester !</string>
    <string name="slide_2_desc">Information of your ongoing semester which you can also call a digital syllabus book.</string>

    <string name="slide_3_title">Overall Result !</string>
    <string name="slide_3_desc">Your whole academic results of each and every courses are now in your pocket with all the time.</string>

    <string name="slide_4_title">Academic Event !</string>
    <string name="slide_4_desc">Get all the academic events and their corresponding details via notification instantly.</string>

    <string name="slide_5_title">Daily Routine !</string>
    <string name="slide_5_desc">Now your phone is your personal assistant which can tell you what and when to do your stuffs.</string>

    <string name="slide_6_title">Personal Contact !</string>
    <string name="slide_6_desc">Finally, The whole university is yours and you can contact with anyone and anytime if you want.</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Home</item>
        <item>Find People</item>
        <item>Photos</item>
        <item>Communities</item>
        <item>Pages</item>
        <item>What\'s Hot</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">

    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_login">Login Here</string>
    <string name="title_activity_dashboard">Dashboard</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="u">U</string>
    <string name="niversity">niversity</string>
    <string name="cant_find_account">Can\'t find your account ?</string>
    <string name="contact_here">Contact Here</string>
    <string name="user_edit">Username</string>
    <string name="password">PASSWORD</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="email_myself">Email: </string>
    <string name="phone_myself">Phone: </string>
    <string name="gender_myself">Gender: </string>
    <string name="nationality_myself">Nationality: </string>
    <string name="fathers_name_myself">Father\'s name: </string>
    <string name="mothers_name_myself">Mother\'s name: </string>
    <string name="present_addr_myself">Present address: </string>
    <string name="permanent_addr_myself">Permanent address: </string>
    <string name="date_of_birth">Date of birth</string>
    <string name="joining_date">Joining Date</string>
    <string name="call_btn_text">Call</string>
    <string name="send_btn_text">Send</string>
    <string name="logout">Logout</string>
    <string name="ongoing_semester">Your Ongoing Semester</string>
    <string name="theory_hrs">Theory hours/week</string>
    <string name="sessional_hrs">Sessional hours/week</string>
    <string name="syllabus">Syllabus</string>
    <string name="title_syllabus">Syllabus</string>
    <string name="attendance">Attendance</string>
    <string name="assignment">Assignment</string>
    <string name="quize">Quize</string>
    <string name="lab_marks">Lab Marks</string>
    <string name="lab_final">Lab Final</string>
    <string name="board_viva">Board Viva</string>
    <string name="final_exam">Final Exam</string>
    <string name="class_test">Class Test</string>
    <string name="choose_an_option_below">Choose an option below</string>
    <string name="result_header">Click one of those option and insert the specified value into these spredsheet</string>
    <string name="semester">Semester: </string>
    <string name="department">Department: </string>
    <string name="course_id">Course ID:</string>
    <string name="section">Section</string>
    <string name="get_started">Get started</string>
    <string name="title_activity_previous_marks">Previous Marks</string>
    <string name="insert_marks">Insert Marks</string>
    <string name="choose_one">Choose one...</string>
    <string name="title_activity_inserting_marks">Class Test Marks</string>
    <string name="roll_no">Roll No.</string>
    <string name="marks">Marks</string>
    <string name="no_of_student">No. of student</string>
    <string name="done">Done</string>
    <string name="ct_no">Class Test No.</string>
    <string name="pagermargin">-170</string>
    <string name="final_semester">Final</string>
    <string name="title">Title:</string>
    <string name="credit">Credit:</string>
    <string name="capture_reg_copy">Capture a photo to your bank receipt</string>
    <string name="take_photo">Take Photo</string>
    <string name="semester_footer">All Informations are authorized by RUET administrator.</string>
    <string name="title_activity_course_registration">Course Registration</string>
    <string name="open">Open</string>
    <string name="title_activity_success">Operation Successful</string>
    <string name="ok">OK</string>
    <string name="email">Email</string>
    <string name="title_contact_details">User Contact Section</string>
    <string name="you_have_following_this_classes_today">You have following these classes today</string>
    <string name="Series">Series</string>
    <string name="hifen">-</string>
    <string name="title_activity_ct_mark_preview">CtMarkPreview</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="preview_marks">Preview Result</string>
    <string name="result_class_test">Result : Class Test</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_no_connection">Connection Error</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="text_no_connection_error">Please check your internet connection. There may not be any wifi connection available or your internet data connection lost due to bad network availability.</string>
    <string name="title_activity_attendance">Attendance Sheet</string>

    <string-array name="day_list">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
    </string-array>

    <string-array name="hour">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string-array name="min">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="am_pm">
        <item>AM</item>
        <item>PM</item>
    </string-array>

    <string-array name="introText">
        <item>None</item>
        <item>Once</item>
        <item>Always</item>
    </string-array>

    <string name="title_activity_inserting_atten">InsertingAtten</string>
    <string name="check_all">Check All</string>
    <string name="title_activity_previous_atten">PreviousAtten</string>
    <string name="title_activity_overall_attendance">Overall Attendance</string>
    <string name="title_activity_final_result">Final Result</string>
    <string name="title_activity_final_result_student_details_show">FinalResultStudentDetailsShow
    </string>
    <string name="present">Present?</string>

</resources>
