<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    android:background="@color/bk_main">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/course_id"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/credit"
            android:textColor="@color/white"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/bk_for"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/scrollView7" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="15dp">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/reg_main_container">

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/bk_for"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="15dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/capture_reg_copy"
                    android:textColor="@color/white"
                    android:layout_marginBottom="10dp"/>

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:id="@+id/img_bank_receipt"
                    android:layout_marginBottom="10dp"
                    android:background="#f0cc95"/>

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/take_photo"
                    android:id="@+id/btn_take_photo"
                    android:background="@drawable/background_btn_default"
                    android:textColor="@color/off_white"
                    android:textSize="18sp"
                    android:onClick="takePhotoForRegistration"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/bk_for"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="15dp"/>

                <Button
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/done"
                    android:id="@+id/btn_reg_done"
                    android:background="@drawable/background_btn_default"
                    android:textColor="@color/off_white"
                    android:textSize="18sp"
                    android:onClick="doneRegistration"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>