<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/bk_main"
    android:id="@+id/container_holder_ct_show">
    <TextView
        android:id="@+id/tv_title_dialog"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:background="@color/bk_for"
        android:text="@string/result_class_test"
        android:textColor="@color/off_white"
        android:textSize="26sp"
        android:gravity="center"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textStyle="bold"
        android:fontFamily="monospace" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/tv_left_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ct_no"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/off_white"/>
        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:background="@color/bk_for"/>
        <TextView
            android:id="@+id/tv_right_title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/marks"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/off_white"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/bk_for"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="5dp"/>

</LinearLayout>